# music-matters

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONFIRMATION.md  DEMO_STATUS.md  DEMUCS_FIXED.md  DEPLOYMENT.md  FINAL_SETUP.md  FIXED.md  GENSPARK_DEPLOY_INSTRUCTIONS.md  HANDOVER.md  LOCAL_SETUP.md  MERGE_HISTORY.md  Music Matters.command  PHASE1.md  PHASE2.md  QUICKSTART.md  README.md  ROADMAP.md  RUNNING.md  STATUS.md  TESTED_WORKING.md  TEST_LOCALLY.sh  UI_FIXED.md  WINDSURF_CONTEXT.md  WINDSURF_PROMPT.txt  WORKING_MVP.md  pyproject.toml  setup.cfg  start.sh  test_api.sh  test_shazam.py
.agents/workflows/: commit.md
.claude/: launch.json
app/: __init__.py  main.py
app/api/: __init__.py  router.py  schemas.py
app/core/: settings.py
app/services/: __init__.py  demucs.py  download.py  library.py  pipeline.py
backend/: config.py  demo_server.py  requirements.txt  server.py  server_sota.py
backend/app/: __init__.py  config.py  main.py
backend/services/: metadata_service.py  sample_extractor.py  (+1 more)
config/: MCP-CONFIG.yaml  settings.example.yaml  settings.yaml
docs/: AGENTS.md  API-SPEC.md  ARCHITECTURE.md  DEMUCS.md  HANDOVER_ORCHESTRATOR.md  MLX-ARCHITECTURE-v2-v2.md  PIPELINE.md  PLAN.md  PRODUCTION-PLAN.md  README.md  STATUS.md  music-matters-prompt-mar26.txt
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
notes/: stateless-memory-llms.md
scripts/: quantize_models.sh  run_demucs.py
test-data/: mm-tree.txt  test-tracks.csv
tests/: __init__.py  test_health.py  test_library_api.py
(+113 files in other folders)
